feat: added websocket features

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ Django==5.1.5
 djangorestframework==3.15.2
 openai==1.59.8
 python-dotenv==1.0.1
+channels==4.2.0
+channels_redis==4.2.1
+daphne==4.1.2
